updated file: updated section for mobile phones under 319px - no need to place inside a media query

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,7 @@ li {
   <= 319PX  -  Mobile XS
 ================================================*/
 
-@media (max-width: 319px) {}
+/* Mobile-First Styles Go Here */
 
 /*================================================
   320px  -  Mobile S
